# plim

./: README.md  pyproject.toml  setup.py
plim/: __init__.py  main.py
plim/algorithm/: BSABindingArea.py  bindingModelFitter.py  fileData.py  flowData.py  kineticFit.py  plasmonFit.py  plasmonPeakFit.py  plasmonSpectra.py  preprocessSignal.py  rateFit.py  spotData.py  spotIdentification.py  spotInfo.py  spotSpectra.py  sprKineticsSimulator.py  sprSystem.py
plim/gui/: plasmonViewerGUI.py  plasmonViewerGUI_2.py  positionTrackGUI.py  saveDataGUI.py  stViewerGUI.py  tViewerGUI.py
plim/gui/signalViewer/: fitWidget.py  (+5 more)
plim/instrument/: plasmonProcessor.py  sCameraFromFile.py
plim/utility/: BSABindingArea.py  BSABindingArea2.py  BSABindingAreaShiftCorrection.py  BSABindingAreaShiftCorrectionSingleW.py  BSABindingAreaVideo.py  BSABindingAreaVideo2.py  Video2Data.py  Video2Data_2.py  _bindingModeFitter.py  bindingModelFitter.py  bindingModelSetFitter.py  evaluate_ka_kd.py  findingSpotOnGrid.py  fitKinetics.py  getRImage.py  getSpotFromImage.py  kineticMassTransport.py  kineticTwoStateGlobal.py  kineticTwoStateLocal.py  normalisedSImage.py  processVideo.py  sensitivityEval.py  sensitivitySurfaceEval.py  showAllData.py  showAllDataGUI.py  showAllDataMain.py  spotSignalStatistics.py  spottingPosition.py  test_fit_lmfit.py  testingMask.py  viewRawImage.py  viewSImage.py  visualiseFlow.py
plim/virtualSystem/: plimMicroscope.py
tests/: test_algorithm.py  test_component.py  test_gui.py  test_instrument.py  test_saving.py  test_signalViewer.py  test_spectralViewer.py
(+4 files in other folders)
